--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "ember-resolver": "^2.0.3",
     "ember-source": "~2.11.0",
     "ember-welcome-page": "^2.0.2",
-    "loader.js": "^4.0.10"
+    "loader.js": "^4.0.10",
+    "phantomjs": "^2.1.7"
   },
   "engines": {
     "node": ">= 0.12.0"
