--- a/tests/.jshintrc
+++ b/tests/.jshintrc
@@ -21,7 +21,10 @@
     "andThen",
     "currentURL",
     "currentPath",
-    "currentRouteName"
+    "currentRouteName",
+    "module",
+    "test",
+    "ok"
   ],
   "node": false,
   "browser": false,
