--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "ember-hotjar",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "0.0.1",
+  "description": "Hotjar tracking code injection.",
   "keywords": [
-    "ember-addon"
+    "ember-addon", "hotjar"
   ],
   "license": "MIT",
-  "author": "",
+  "author": "Donal Byrne",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "",
+  "repository": "https://github.com/byrnedo/ember-hotjar",
   "scripts": {
     "build": "ember build",
     "start": "ember server",
@@ -43,8 +43,7 @@
     "ember-resolver": "^2.0.3",
     "ember-source": "~2.11.0",
     "ember-welcome-page": "^2.0.2",
-    "loader.js": "^4.0.10",
-    "phantomjs": "^2.1.7"
+    "loader.js": "^4.0.10"
   },
   "engines": {
     "node": ">= 0.12.0"
